# MapperInteractive

./: .editorconfig  .gitignore  .travis.yml  CLI_README.md  Dockerfile  LICENSE  MAINFEST.in  MANIFEST.in  Procfile  README.md  mapper-interactive-cli.py  mapperoutput.ipynb  pyproject.toml  requirements-docs.txt  run.py  setup.py  supervisord.conf
app/: cover.py  kmapper.py  views.py
app/enhanced_mapper/: AdaptiveCover.py  converter.py  cover.py  graph.py  node.py  oldadaptive_cover.py
app/templates/: index.html
app/util/: assets.py
assets/datasets/: 3d-cat.csv  digits.csv  two-circle.csv
boilerplate/: server.py
boilerplate/files/: .gitkeep
boilerplate/modules/: main.js
boilerplate/styles/: styles.css
docs/: .gitignore  CNAME  Makefile  _config.yml  about.rst  conf.py  configuration.rst  index.md  index.rst  introduction.md  make.bat  quick-start.rst  reference.rst  started.rst
docs/_posts/: 2019-01-22-welcome-to-jekyll.markdown
docs/general/: about.rst  reference.rst
docs/get-started/: create-empty-project.md  development.md  get-started.md
docs/introduction/: concepts.md
docs/km/: configuration.rst  index.rst  started.rst
mapper_interactive/: __main__.py  cli.py  server.py
mappercore/: __init__.py  app.py  components.py  events.py  layer.py  project.py  router.py  server.py
sample_datasets/: 3d-horse.csv  individuals.csv  iris.csv
static/: README.md  gulpfile.js  package.json
test/: test_kepler_mapper.py  test_server.py
tests/: test_kepler_mapper.py  test_server.py
visualization/: gulpfile.js
web/: .editorconfig  gulpfile.js
(+1962 files in other folders)
