[tool.poetry]
name = "mapper_interactive"
version = "0.0.1"
description = "An interactive visualization framework for high-dimensional point clouds built on Mapper"
authors = ["Yaodong Zhao <yaodong.zhao@utah.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
Flask = "^2.1.3"
Flask-Assets = "^2.0"
numpy = "^1.23.1"
pandas = "^1.4.3"
scipy = "^1.8.1"
scikit-learn = "^1.1.1"
networkx = "^2.8.4"
Sphinx = {version = "^5.0.2", optional = true}
sktda-docs-config = {version = "^0.0.8", optional = true}
statsmodels = {version = "^0.13.2", optional = true}
tqdm = {version = "^4.64.0", optional = true}
torch = {version = "^1.12.0", optional = true}
platformdirs = "^2.5.2"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"
pytest = "^7.1.2"

[tool.poetry.extras]
docs = [ "Sphinx" , "sktda-docs-config" ]
linear = [ "statsmodels" ]
cli = [ "tqdm" ]
gpu = [ "torch" ]
all = [ "statsmodel", "tqdm", "torch" ]

[tool.pytest.ini_options]
filterwarnings = [ "ignore::UserWarning", "ignore::DeprecationWarning", ]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
